syntax = "proto3";

package grpc.proto;

option optimize_for = SPEED;
option java_multiple_files = true;
option java_package = "garden_leave.grpc";

import "config.proto";
import "google/protobuf/any.proto";

// https://www.baeldung.com/grpc-introduction
// https://github.com/fullstorydev/grpcurl

message ConfigRequest {
    config.proto.ConfigKey config_key                   = 1;
}

message ConfigResponse {
    config.proto.ConfigKey config_key                   = 1;
    google.protobuf.Any config                          = 2;
}

service ConfigService {
    rpc GetConfig(ConfigRequest) returns (ConfigResponse);
    rpc ListConfig(ConfigRequest) returns (stream ConfigResponse);
}
